# ecgrec

./: README.md  basic-synthesis.ipynb  pyproject.toml  reglin-model.ipynb  reglin-synthesis.ipynb  requirements.txt
bash/: code15-download.sh  code15-links.txt
models/: reglin-v0.scaler.pkl
models/t0/: reglin-t0-v0.pkl  reglin-t0-v0.scaler.pkl  reglin-t0-v1.pth
models/t1/: reglin-t1-v0.pkl  reglin-t1-v0.scaler.pkl  reglin-t1-v1.pth
models/t2/: ae-t2-v0.pth  ae-t2-v1.pth
models/v0/: reglin-v0.pkl
research/: basic-synthesis.ipynb  code15.ipynb  reglin-analysis.ipynb  reglin-synthesis.ipynb
