[tool.poetry]
name = "notebooks"
version = "1.0.0"
description = ""
authors = ["pab-h <dev.pab.2020@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.15"
matplotlib = "^3.9.3"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
torch = "^2.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
